RESOLVED FIXED164178
[CSS Parser] Fix transform-origin and perspective-origin to parse as shorthands
https://bugs.webkit.org/show_bug.cgi?id=164178
Summary [CSS Parser] Fix transform-origin and perspective-origin to parse as shorthands
Dave Hyatt
Reported 2016-10-29 07:12:23 PDT
[CSS Parser] Fix transform-origin and perspective-origin to parse as shorthands
Attachments
Patch (6.83 KB, patch)
2016-10-29 07:28 PDT, Dave Hyatt
zalan: review+
Patch (8.83 KB, patch)
2016-10-29 08:21 PDT, Dave Hyatt
no flags
Dave Hyatt
Comment 1 2016-10-29 07:28:00 PDT
Dave Hyatt
Comment 2 2016-10-29 08:21:45 PDT
WebKit Commit Bot
Comment 3 2016-10-29 10:49:48 PDT
Comment on attachment 293293 [details] Patch Clearing flags on attachment: 293293 Committed r208107: <http://trac.webkit.org/changeset/208107>
WebKit Commit Bot
Comment 4 2016-10-29 10:49:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.